Fixed horizontal scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,12 @@
   font-family: Tahoma;
 }
 
+/* body {
+  overflow-x: hidden;
+} */
+
 p {
-  font-size: 18px;
+  font-size: 20px;
   padding: 0 10px;
   text-align: center;
 
@@ -219,7 +223,7 @@ small {
 }
 
 .about-page p {
-  width: 60%;
+  /* width: 60%; */
   margin: 20px auto;
 }
 
